added a new handler delete product
